...
import GenericHeader from "@/app/components/Header/GenericHeader";
import BottomNavigation from "@/app/components/BottomNavigation/BottomNavigation";

// Import the ListModal component
import ListModal from "./ListModal";

type POICategory = "restaurant" | "cafe" | "washroom" | "campus";

interface Task {
  id: string;
  name: string;
  coordinates: Coordinates;
  selected: boolean;
...
      />
      <View style={stylesLocal.content}>
        <View style={stylesLocal.dropdown}>
          <TouchableOpacity
            style={stylesLocal.dropdownHeader}
            onPress={() => setDropdownOpen(!dropdownOpen)}
            testID={"category-dropdown"}
          >
            <Text style={stylesLocal.dropdownHeaderText}>
              Select Categories: {selectedCatText}
            </Text>
          </TouchableOpacity>
          {dropdownOpen && (
...
              />
              <Text style={stylesLocal.taskName}>{item.name}</Text>
            </View>
          )}
        />
        <TouchableOpacity style={stylesLocal.button} onPress={onBuildRoute}>
          <Text style={stylesLocal.buttonText}>Build Best Route (TSP)</Text>
        </TouchableOpacity>
      </View>
      <BottomNavigation testID="bottom-navigation" />

      {/* List Modal for showing the route steps */}
      <ListModal
...
