...
            <Feather name={!user ? "log-in" : "log-out"} size={22} color="white" />
          </TouchableOpacity>

          <TouchableOpacity
            style={styles.menuButton}
            onPress={() => router.push("/screens/Home/HomeMenuScreen")}
            testID="menu-button"
          >
            <Feather name="menu" size={26} color="white" />
          </TouchableOpacity>
        </View>

        {/* Header Content */}
...
