...
      </TouchableOpacity>

      <TouchableOpacity
        style={styles.menuItem}
        activeOpacity={0.8}
        onPress={() => router.push("/screens/Schedule/MultiStopPlanner")}
        testID="multi-stop-planner-button"
      >
        <Text style={styles.menuText}>📖 {t("Multi Stop Planner")}</Text>
      </TouchableOpacity>
    </View>
  );
}
...
