...
        <LanguageSelector />

        {/* Account Details */}
        <TouchableOpacity
          style={styles.settingOption}
          onPress={() => router.push("/screens/Settings/AccountSettingsScreen")}
          testID="account-details-button"
        >
          <FontAwesome5 name="user" size={18} color="#912338" />
          <Text style={styles.settingText}>{t("Account details")}</Text>
          <FontAwesome5 name="chevron-right" size={16} color="#912338" />
        </TouchableOpacity>
        
...
