...
            </View>
          );
        })}

        <View style={styles.divider} testID="divider" />

        <Text style={styles.label} testID="schedule-label">
          {t("Select Schedule")}
        </Text>
        {availableSchedules.length > 0 ? (
          availableSchedules.map((calendar) => (
            <View
              key={calendar.id}
...
